force-app/main/default/objects/RoundRobin_Config__c/RoundRobin_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RoundRobin Config</label>
</CustomObject>