force-app/main/default/objects/RoundRobin_Config__c/fields/User_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Name__c</fullName>
    <label>User Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>