force-app/main/default/objects/RoundRobin_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>User_Role_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Record_Type_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>